--- a/VantecWeb/index.css
+++ b/VantecWeb/index.css
@@ -6,6 +6,19 @@
     overflow: hidden;
 }
 
+@media screen and (orientation: landscape) {
+    html {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh;
+        height: 100vw;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
+
 body {
     height: 100%;
     width: 100%;
@@ -24,15 +37,17 @@ body {
     width: 100%;
     padding-top: 10px;
     max-height: 126px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     background-color: #e4e4e4;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .user {
     margin-right: 5px;
     margin-bottom: 15px;
     box-shadow: 0px 5px 10px 2px rgba(88, 103, 221, 0.19);
-    padding: 0.75rem 2rem;
+    padding: 0.5rem 1rem;
     font-size: 1rem;
     font-weight: 400;
     font-family: Poppins;
@@ -77,10 +92,13 @@ body {
     }
 
 #usernamediv {
+    font-family: "Meiryo UI", メイリオ, Verdana, "ＭＳ Ｐゴシック", sans-serif;
     background-color: #5867dd;
     color: white;
     text-align: center;
     height: auto;
-    font-size: 2.5em;
+    font-size: 1.3em;
     font-weight: 900;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
