--- a/VantecWeb/index.css
+++ b/VantecWeb/index.css
@@ -84,3 +84,15 @@ body {
     font-size: 2.5em;
     font-weight: 900;
 }
+@media screen and (orientation: landscape) {
+    html {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh;
+        height: 100vw;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
