--- a/VantecWeb/HTML/index.css
+++ b/VantecWeb/HTML/index.css
@@ -42,7 +42,7 @@ h1, h2, h3, h4, h5, h6,
     filter:alpha(opacity=60);
     background-color:#777;
     z-index:1002;
-    left;0px;
+    left:0px;
     background:rgba(0,0,0,0.6);
 }
 .alert-alarm {
