--- a/VantecWeb/index.css
+++ b/VantecWeb/index.css
@@ -6,7 +6,7 @@
     overflow: hidden;
 }
 
-@media screen and (orientation: landscape) {
+/*@media screen and (orientation: landscape) {
     html {
         transform: rotate(-90deg);
         transform-origin: left top;
@@ -17,7 +17,7 @@
         top: 100%;
         left: 0;
     }
-}
+}*/
 
 body {
     height: 100%;
@@ -66,9 +66,12 @@ body {
     line-height: 1.25;
     transition: all 0.15s ease-in-out;
     text-transform: none;
-    overflow: visible;
+    overflow: hidden;
     touch-action: manipulation;
     outline: none;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 120px;
 }
 
     .user.selected {
@@ -101,16 +104,4 @@ body {
     font-weight: 900;
     white-space: nowrap;
     text-overflow: ellipsis;
-}
-@media screen and (orientation: landscape) {
-    html {
-        transform: rotate(-90deg);
-        transform-origin: left top;
-        width: 100vh;
-        height: 100vw;
-        overflow-x: hidden;
-        position: absolute;
-        top: 100%;
-        left: 0;
-    }
 }
