--- a/VantecWeb/HTML/index.css
+++ b/VantecWeb/HTML/index.css
@@ -105,3 +105,7 @@ h1, h2, h3, h4, h5, h6,
         margin-left: 9.7px;
     }
 }
+.bootstrap-timepicker-widget input {
+    font-size: 1em;
+    width: 100% !important;
+}
